--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-This repo has the notes that I have collected/made for the Ruby sessions that I am conducting at work. Hope this
-helps other people. Mostly outlines of topics that I plan to cover in 8 weeks of sessions.
+This repo has the notes that I have collected/made for the Ruby sessions that I am conducting at work. 
+Hope this helps other people. Mostly outlines of topics that I plan to cover in 8 weeks of sessions.
+
+1. Introduction
+2. Objects and Classes
