Adding a chapter for self

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Hope this helps other people. Mostly outlines of topics that I plan to cover in 
 
 1. Introduction
 2. Objects and Classes
+3. Array and Hashes
+4. self
